Fixed cut off on home page

--- a/client/layout/layout/_container.scss
+++ b/client/layout/layout/_container.scss
@@ -29,15 +29,10 @@
     &.splash {
         margin-top: 160px;
         transition: transform 300ms;
+        bottom: -95px;
     }
 
     &.splash-collapsed {
         transform: translateY(-95px);
-        margin-top: 160px;
-        transition: transform 300ms;
-
-        .content_inner {
-            margin-bottom: 95px;
-        }
     }
 }
